# EnigmaWave

./: Cargo.toml  README.md  rust-toolchain.toml  x86_64-unknow-core.json
.cargo/: config.toml
enigma-kernel/: Cargo.toml
enigma-kernel/src/: framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  memory.rs
enigma-kernel/src/allocator/: fixed_size_block.rs  mod.rs
enigma-kernel/src/drivers/: apic.rs  mod.rs  serial.rs
enigma-kernel/src/task/: executor.rs  keyboard.rs  mod.rs
enigma-kernel/tests/: heap_allocation.rs  stack_overflow.rs
src/: build.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga.rs
src/allocator/: fixed_size_block.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: heap_allocation.rs  stack_overflow.rs
