[package]
name = "EnigmaWave"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"
publish = false

repository = "https://github.com/jdose100/EnigmaWave.git"
description = "An operating system created by an enthusiast."

[features]
default = ["qemu"]
qemu = []

[workspace]
members = ["enigma-kernel"]

[dependencies]
ovmf-prebuilt = "0.1.0-alpha"

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
enigma-kernel = { path = "enigma-kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.3"

